--- a/Dynamic-Community-Portal/views/pages/about.ejs
+++ b/Dynamic-Community-Portal/views/pages/about.ejs
@@ -1,5 +1,9 @@
 <%- include('../partials/header') %>
 
 <h1>About Us</h1>
-
+<ul>
+  <% team.forEach(member => { %>
+    <li><strong><%= member.name %></strong> - <%= member.role %></li>
+  <% }) %>
+</ul>
 <%- include('../partials/footer') %>
