Testing for successful commit

--- a/Dynamic-Community-Portal/views/pages/home.ejs
+++ b/Dynamic-Community-Portal/views/pages/home.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
 
 <h1>Welcome to the Community Portal</h1>
-
+<h1>Check out what's happening!</h1>
 <%- include('../partials/footer') %>
