Fixed some backend problems that were accuring and added on some of the pages

--- a/Dynamic-Community-Portal/views/partials/footer.ejs
+++ b/Dynamic-Community-Portal/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main>
 <footer class = "footer1">
-  <p>&copy; 2025 Community Portal. All rights reserved.</p>
+  <p>&copy; 2025 Dynamic Community Portal. All rights are reserved.</p>
 </footer>
 </body>
 </html>
