--- a/Dynamic-Community-Portal/views/pages/thankyou.ejs
+++ b/Dynamic-Community-Portal/views/pages/thankyou.ejs
@@ -1,4 +1,4 @@
 <%- include('../partials/header') %>
 <h1>Thank You!</h1>
-<p>Your message has been received.</p>
+<p>Your message has been received and we will get back to you soon.</p>
 <%- include('../partials/footer') %>
